// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests <ProductCard /> Incrementa el comptador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`Tests <ProductCard /> Mostra correctament el component 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
